force-app/main/default/objects/Employee__c/fields/Bank_Account_c__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_c__c</fullName>
    <label>Bank_Account__c</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>