force-app/main/default/objects/Employee__c/fields/Base_Salary_c__c.field-meta.xml
<CustomField>
    <fullName>Base_Salary_c__c</fullName>
    <label>Base_Salary__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>