force-app/main/default/objects/Employee__c/fields/Clock_out_Time__c.field-meta.xml
<CustomField>
    <fullName>Clock_out_Time__c</fullName>
    <label>Clock out Time</label>
    <type>DateTime</type>
</CustomField>