force-app/main/default/objects/Employee__c/fields/IFSC_Code_c__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code_c__c</fullName>
    <label>IFSC_Code__c</label>
    <length>20</length>
    <type>Text</type>
</CustomField>