force-app/main/default/objects/Employee__c/fields/Is_Active_c__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_c__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is_Active__c</label>
    <type>Checkbox</type>
</CustomField>