force-app/main/default/objects/Employee__c/fields/IS_Clicked__c.field-meta.xml
<CustomField>
    <fullName>IS_Clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS Clicked</label>
    <type>Checkbox</type>
</CustomField>