force-app/main/default/objects/Employee__c/fields/Last_Clicked_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Clicked_Date__c</fullName>
    <label>Last Clicked Date</label>
    <type>DateTime</type>
</CustomField>