force-app/main/default/objects/Employee__c/fields/Total_Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Working_Hours__c</fullName>
    <formula>Clock_out_Time__c  -  Clock_out_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Working Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>