force-app/main/default/objects/Employee__c/validationRules/Phone_number_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_restriction</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
  REGEX(Phone_No__c, &quot;^[0-9]{10}$&quot;)
)</errorConditionFormula>
    <errorDisplayField>Phone_No__c</errorDisplayField>
    <errorMessage>Phone no. should be of 10 digits</errorMessage>
</ValidationRule>