force-app/main/default/objects/Employee__c/listViews/Department.listView-meta.xml
<ListView>
    <fullName>Department</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Project__c</columns>
    <columns>User_Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>User_Type__c</field>
        <operation>equals</operation>
        <value>Admin</value>
    </filters>
    <label>Department</label>
</ListView>